cmake_minimum_required(VERSION 3.26)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm
        boj/3273.cpp)

add_executable(2493 boj/2493.cpp)
add_executable(2164 boj/2164.cpp)
add_executable(9012 boj/9012.cpp)
add_executable(boj_11728 boj/11728.cpp)
add_executable(merge merge.cpp)
add_executable(boj_1463 boj/1463.cpp)
add_executable(boj_9095 boj/9095.cpp)
add_executable(boj_2108 boj/2108.cpp)
add_executable(test test.cpp)
add_executable(2579 boj/2579.cpp)
add_executable(boj_11726 boj/11726.cpp)
add_executable(boj_1149 boj/1149.cpp)
add_executable(boj_11659 boj/11659.cpp)
add_executable(boj_1026 boj/1026.cpp)
add_executable(boj_1931 boj/1931.cpp)
add_executable(boj_1920 boj/1920.cpp)
add_executable(boj_10816 boj/10816.cpp)
add_executable(boj_18870 boj/18870.cpp)
add_executable(boj_1654 boj/1654.cpp)
add_executable(boj_2230 boj/2230.cpp)
add_executable(boj_1806 boj/1806.cpp)