cmake_minimum_required(VERSION 3.26)
project(algorithm)

set(CMAKE_CXX_STANDARD 17)

add_executable(algorithm
        boj/array/3273.cpp)

add_executable(2493 boj/stack/2493.cpp)
add_executable(2164 boj/queue/2164.cpp)
add_executable(9012 boj/stack/9012.cpp)
add_executable(boj_11728 boj/array/11728.cpp)
add_executable(merge merge.cpp)
add_executable(boj_1463 boj/dp/1463.cpp)
add_executable(boj_9095 boj/dp/9095.cpp)
add_executable(boj_2108 boj/implemented/2108.cpp)
add_executable(test test.cpp)
add_executable(2579 boj/dp/2579.cpp)
add_executable(boj_11726 boj/dp/11726.cpp)
add_executable(boj_1149 boj/dp/1149.cpp)
add_executable(boj_11659 boj/dp/11659.cpp)
add_executable(boj_1026 boj/greedy/1026.cpp)
add_executable(boj_1931 boj/greedy/1931.cpp)
add_executable(boj_1920 boj/binarySearch/1920.cpp)
add_executable(boj_10816 boj/binarySearch/10816.cpp)
add_executable(boj_18870 boj/binarySearch/18870.cpp)
add_executable(boj_1654 boj/parametricSearch/1654.cpp)
add_executable(boj_2230 boj/twoPointer/2230.cpp)
add_executable(boj_1806 boj/twoPointer/1806.cpp)
add_executable(boj_7662 boj/binarySearchTree/7662.cpp)
add_executable(boj_1202 boj/1202.cpp)
add_executable(boj_7576 boj/bfs/7576.cpp)
add_executable(boj_4179 boj/4179.cpp)
add_executable(boj_1629 boj/recursion/1629.cpp)
add_executable(boj_11729 boj/recursion/11729.cpp)
add_executable(boj_15649 boj/backTracking/15649.cpp)
add_executable(boj_15650 boj/backTracking/15650.cpp)
add_executable(boj_15651 boj/backTracking/15651.cpp)
add_executable(boj_15652 boj/backTracking/15652.cpp)
add_executable(boj_14002 boj/dp/11053.cpp)
add_executable(boj_9251 boj/dp/9251.cpp)
add_executable(boj_11000 boj/11000.cpp)
add_executable(boj_11724 boj/graph/11724.cpp)
add_executable(boj_1260 boj/graph/1260.cpp)
add_executable(boj_dp_1106 boj/dp/1106.cpp)
add_executable(boj_greedy_2212 boj/greedy/2212.cpp)
add_executable(boj_greedy_11399 boj/greedy/11399.cpp)
add_executable(boj_tree_11725 boj/tree/11725.cpp)
add_executable(boj_tree_1991 boj/tree/1991.cpp)
add_executable(boj_greedy_11501 boj/greedy/11501.cpp)
add_executable(boj_greedy_1744 boj/greedy/1744.cpp)
add_executable(boj_implemented_2992 boj/dp/9461.cpp)
add_executable(boj_dp_2156 boj/dp/2156.cpp)
add_executable(boj_dp_11048 boj/dp/11048.cpp)
add_executable(boj_dp_2839 boj/dp/2839.cpp)
add_executable(boj_twoPointer_2470 boj/twoPointer/2470.cpp)
add_executable(boj_pq_11286 boj/pq/11286.cpp)
add_executable(boj_graph_2606 boj/graph/2606.cpp)
add_executable(boj_hash_7785 boj/hash/7785.cpp)
add_executable(boj_hash_1620 boj/hash/1620.cpp)